# proy-grado

./: .gitattributes  .gitignore  CMakeLists.txt  Doxyfile  README.md  config.yaml  landtracking  marker_generator  proy_grado  proy_grado.cbp  proy_grado_proto.cbp  screencap.avi
calibracion/: laptop_bg_camera.yml  out_camera_data.yml
cmake/: FindFFmpeg.cmake
docs/html/: _a_r_c_o_m_m_a_n_d_s___decoder_8h.html  _a_r_c_o_m_m_a_n_d_s___decoder_8h.js  _a_r_c_o_m_m_a_n_d_s___decoder_8h__dep__incl.map  _a_r_c_o_m_m_a_n_d_s___decoder_8h__dep__incl.md5  _a_r_c_o_m_m_a_n_d_s___decoder_8h__incl.map  _a_r_c_o_m_m_a_n_d_s___decoder_8h__incl.md5  _a_r_c_o_m_m_a_n_d_s___decoder_8h_source.html  _a_r_c_o_m_m_a_n_d_s___filter_8h.html  _a_r_c_o_m_m_a_n_d_s___filter_8h.js  _a_r_c_o_m_m_a_n_d_s___filter_8h__dep__incl.map  _a_r_c_o_m_m_a_n_d_s___filter_8h__dep__incl.md5  _a_r_c_o_m_m_a_n_d_s___filter_8h__incl.map  _a_r_c_o_m_m_a_n_d_s___filter_8h__incl.md5  _a_r_c_o_m_m_a_n_d_s___filter_8h_source.html  _a_r_c_o_m_m_a_n_d_s___generator_8h.html  _a_r_c_o_m_m_a_n_d_s___generator_8h.js  _a_r_c_o_m_m_a_n_d_s___generator_8h__dep__incl.map  _a_r_c_o_m_m_a_n_d_s___generator_8h__dep__incl.md5  _a_r_c_o_m_m_a_n_d_s___generator_8h__incl.map  _a_r_c_o_m_m_a_n_d_s___generator_8h__incl.md5  _a_r_c_o_m_m_a_n_d_s___generator_8h_source.html  _a_r_c_o_m_m_a_n_d_s___ids_8h.html  _a_r_c_o_m_m_a_n_d_s___ids_8h.js  _a_r_c_o_m_m_a_n_d_s___ids_8h_source.html  _a_r_c_o_m_m_a_n_d_s___types_8h.html  _a_r_c_o_m_m_a_n_d_s___types_8h.js  _a_r_c_o_m_m_a_n_d_s___types_8h__dep__incl.map  _a_r_c_o_m_m_a_n_d_s___types_8h__dep__incl.md5  _a_r_c_o_m_m_a_n_d_s___types_8h__incl.map  _a_r_c_o_m_m_a_n_d_s___types_8h__incl.md5  _a_r_c_o_m_m_a_n_d_s___types_8h_source.html  _a_r_c_o_m_m_a_n_d_s___version_8h.html  _a_r_c_o_m_m_a_n_d_s___version_8h.js  _a_r_c_o_m_m_a_n_d_s___version_8h__dep__incl.map  _a_r_c_o_m_m_a_n_d_s___version_8h__dep__incl.md5  _a_r_c_o_m_m_a_n_d_s___version_8h_source.html  _a_r_c_o_n_t_r_o_l_l_e_r___d_i_c_t_i_o_n_a_r_y___key_8h.html  _a_r_c_o_n_t_r_o_l_l_e_r___d_i_c_t_i_o_n_a_r_y___key_8h.js  _a_r_c_o_n_t_r_o_l_l_e_r___d_i_c_t_i_o_n_a_r_y___key_8h__dep__incl.map  _a_r_c_o_n_t_r_o_l_l_e_r___d_i_c_t_i_o_n_a_r_y___key_8h__dep__incl.md5  (+5906 more)
docs/latex/: _a_r_c_o_m_m_a_n_d_s___decoder_8h.tex  _a_r_c_o_m_m_a_n_d_s___decoder_8h__dep__incl.md5  _a_r_c_o_m_m_a_n_d_s___decoder_8h__incl.md5  _a_r_c_o_m_m_a_n_d_s___filter_8h.tex  _a_r_c_o_m_m_a_n_d_s___filter_8h__dep__incl.md5  _a_r_c_o_m_m_a_n_d_s___filter_8h__incl.md5  _a_r_c_o_m_m_a_n_d_s___generator_8h.tex  _a_r_c_o_m_m_a_n_d_s___generator_8h__dep__incl.md5  _a_r_c_o_m_m_a_n_d_s___generator_8h__incl.md5  _a_r_c_o_m_m_a_n_d_s___ids_8h.tex  _a_r_c_o_m_m_a_n_d_s___types_8h.tex  _a_r_c_o_m_m_a_n_d_s___types_8h__dep__incl.md5  _a_r_c_o_m_m_a_n_d_s___types_8h__incl.md5  _a_r_c_o_m_m_a_n_d_s___version_8h.tex  _a_r_c_o_m_m_a_n_d_s___version_8h__dep__incl.md5  _a_r_c_o_n_t_r_o_l_l_e_r___d_i_c_t_i_o_n_a_r_y___key_8h.tex  _a_r_c_o_n_t_r_o_l_l_e_r___d_i_c_t_i_o_n_a_r_y___key_8h__dep__incl.md5  _a_r_c_o_n_t_r_o_l_l_e_r___device_8h.tex  _a_r_c_o_n_t_r_o_l_l_e_r___device_8h__dep__incl.md5  _a_r_c_o_n_t_r_o_l_l_e_r___device_8h__incl.md5  _a_r_c_o_n_t_r_o_l_l_e_r___device_8h_a38364a7d0f7ae99f5afd7049d0f2e84c_icgraph.md5  _a_r_c_o_n_t_r_o_l_l_e_r___device_8h_a640bde25ac0ece9d84bec471d92aa1da_icgraph.md5  _a_r_c_o_n_t_r_o_l_l_e_r___device_8h_a89dccacdc7c409107e63f0d0198488ff_icgraph.md5  _a_r_c_o_n_t_r_o_l_l_e_r___device_8h_a89ea07ae108e9aabfb0aa09798b4384d_icgraph.md5  _a_r_c_o_n_t_r_o_l_l_e_r___device_8h_aa0cd70040aacba3f31354f483fe82b10_icgraph.md5  _a_r_c_o_n_t_r_o_l_l_e_r___device_8h_ac66fc49f8948a922ae6e64102eb1b249_icgraph.md5  _a_r_c_o_n_t_r_o_l_l_e_r___dictionary_8h.tex  _a_r_c_o_n_t_r_o_l_l_e_r___dictionary_8h__dep__incl.md5  _a_r_c_o_n_t_r_o_l_l_e_r___dictionary_8h__incl.md5  _a_r_c_o_n_t_r_o_l_l_e_r___error_8h.tex  _a_r_c_o_n_t_r_o_l_l_e_r___error_8h__dep__incl.md5  _a_r_c_o_n_t_r_o_l_l_e_r___error_8h_acc30e5c4881bdc01117ca61d50986cac_icgraph.md5  _a_r_c_o_n_t_r_o_l_l_e_r___feature_8h.tex  _a_r_c_o_n_t_r_o_l_l_e_r___feature_8h__dep__incl.md5  _a_r_c_o_n_t_r_o_l_l_e_r___feature_8h__incl.md5  _a_r_c_o_n_t_r_o_l_l_e_r___frame_8h.tex  _a_r_c_o_n_t_r_o_l_l_e_r___frame_8h__dep__incl.md5  _a_r_c_o_n_t_r_o_l_l_e_r___frame_8h__incl.md5  _a_r_c_o_n_t_r_o_l_l_e_r___network_8h.tex  _a_r_c_o_n_t_r_o_l_l_e_r___network_8h__dep__incl.md5  (+2187 more)
lib/ORB_SLAM2/: CMakeLists.txt  KeyFrameTrajectory.txt  ORB_SLAM2.cbp
lib/pkgconfig/: spdlog.pc
lib/yaml-cpp/: YAML_CPP.cbp  yaml-cpp-config.cmake  yaml-cpp-targets.cmake
muestra/: camara.yml  images.xml  images.xml~
resources/calibration-images/: calib.xml  calibrar.sh  camera.xml
sample-input/: exapleTracking.mpg  markers.mpg
sandbox/ cross-hello-world/: hello  hello-v2  hello.c
sandbox/ExternalApiVREP/: compile.sh  extApiInternal.h  quadrucopter.ttt  simular  simular.cpp  v_repConst.h
sandbox/tracking-dlib/: compile.sh  run.sh  video_tracking_ex  video_tracking_ex.cpp
src/: Body.cpp  Body.cpp.orig  Body.h  BodyTest.h  BodyTest1.cpp  Brain.cpp  Brain.h  Config.cpp  Config.h  ConfigDefaults.cpp  ConfigDefaults.h  ConfigKeys.cpp  ConfigKeys.h  CustomCalib.yaml  MessageHandler.cpp  MessageHandler.h  Tracker.cpp  Tracker.h  VisualDebugger.cpp  VisualDebugger.h  calibration.cpp  external_debugger.cpp  main.cpp  main2.cpp  marker.cpp
src/bodytests/: BodyTest.h  BodyTest1.cpp  BodyTest2.cpp  BodyTestDummy.cpp  BodyTestMarker.cpp  BodyTestRegistry.cpp  BodyTestRegistry.h  BodyTestRmove.cpp  BodyTestRmove2.cpp  FlightManeuver.cpp  Follow.cpp  OpticalFlowObstacleAvoidance.cpp  OrbSlam2.cpp  PatrolAndFollow.cpp  SvoSlam.cpp  TrackMarkers.cpp
src/communication/: BodyComm.cpp  BodyComm.h  BodyCommunication.cpp  (+17 more)
src/proto/: CMakeLists.txt  advertisement.pb.cc  advertisement.pb.h  advertisement.proto  dronestate.pb.cc  dronestate.pb.h  dronestate.proto  hello.pb.cc  hello.pb.h  hello.proto  message.pb.cc  message.pb.h  message.proto  ping.pb.cc  ping.pb.h  ping.proto  shutdown.pb.cc  shutdown.pb.h  shutdown.proto  state.pb.cc  state.pb.h  state.proto
(+419 files in other folders)
