INCLUDE(FindProtobuf)

FIND_PACKAGE(Protobuf REQUIRED)

INCLUDE_DIRECTORIES(${PROTOBUF_INCLUDE_DIR})
PROTOBUF_GENERATE_CPP(PROTO_SRC PROTO_HEADER message.proto dronestate.proto)

ADD_LIBRARY(proto ${PROTO_HEADER} ${PROTO_SRC})

set(PROTO_HEADER ${PROTO_HEADER} PARENT_SCOPE)
set(PROTO_SRC ${PROTO_SRC} PARENT_SCOPE)